[gd_scene load_steps=4 format=3 uid="uid://8ubhvyrln8rr"]

[ext_resource type="Theme" uid="uid://cblg4ct5bcghv" path="res://interfaces/menu_theme.tres" id="1_3tpjm"]
[ext_resource type="Script" path="res://interfaces/pause_menu.gd" id="1_mjem6"]
[ext_resource type="PackedScene" uid="uid://cgbgia2e7vacn" path="res://interfaces/options.tscn" id="3_nnkut"]

[node name="Pause_Menu" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjem6")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.082, 0.063, 0.063, 0.433)

[node name="Pause" type="PanelContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -29.5
offset_right = 52.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3tpjm")

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 18

[node name="Label" type="Label" parent="Pause/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_type_variation = &"title"
text = "PAUSA"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Pause/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("1_3tpjm")
text = "Continuar"

[node name="Options" type="Button" parent="Pause/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("1_3tpjm")
text = "Configurações"

[node name="Exit" type="Button" parent="Pause/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("1_3tpjm")
text = "Voltar ao menu"

[node name="OptionMenu" parent="." instance=ExtResource("3_nnkut")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = -125.0
offset_top = -127.5
offset_right = 125.0
offset_bottom = 127.5

[connection signal="pressed" from="Pause/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/Options" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
